--- a/p_my_work.html
+++ b/p_my_work.html
@@ -5,20 +5,44 @@
     <title>My Projects!</title>
     
     <link rel="stylesheet" type="text/css" href="p_base.css">
+
+    <nav>
+        <button><a href="index.html">Homepage</a></button>
+        <button><a href="p_about_me.html">Get To Know Me!</a></button>
+    </nav>
 </head>
 
 <body>
     <header>
         <a href="default.asp"></a>
-        </header>
+    </header>
         <h1>Here's some of my Work!</h1>
-        <a href="../rafaelpagan_problem1/adder.html">Math Equations</a>
-        <a href="../rafaelpagan_problem2/converter.html">Temperature Converter</a>
-        <a href="../rafaelpagan_project1/mp_index_txt.html">Mobile Panini</a>
-        <a href="../rafaelpagan_project2/tss_coach_txt.html">Tri and Succeed Sports</a>
-        <a href="../rafaelpagan_project5/mi_pricing.html">Marlin Internet</a>
-        <a href="../rafaelpagan_project6/rb_build_txt.html">Build Your Own Red Ball Pizza</a>
-        <a href="../rafaelpagan_project6/rb_customer_txt.html">Manage Your Red Ball Pizza Account</a>
-</body>
+
+        <table>
+            <tr>Javascript
+                <th><a href="../coqui/rafaelpagan_problem1/adder.html">Math Equations</a></th>
+                <th><a href="../coqui/rafaelpagan_problem2/converter.html">Temperature Converter</a></th>
+                <th><a href="../coqui/tutorial/lht_august_txt.html">The Lyman Hall Theater</a>
+                    <img src="Lyman_hall.PNG" alt="Lyman Hall Theater" id="lyman"/></th>
+            </tr>
+        </table>
+        
+        <table>
+            <tr>Websites
+                <th><a href="../coqui/rafaelpagan_project1/mp_index_txt.html">Mobile Panini</a>
+                    <img src="mobile_panini.PNG" alt="Mobile Panini"/></th>
+                <th><a href="../coqui/rafaelpagan_project2/tss_coach_txt.html">Tri and Succeed Sports</a>
+                    <img src="tri_&_succeed_sports.PNG" alt="Tri and Succeed Sports"/></th>
+                <th><a href="../coqui/rafaelpagan_project5/mi_pricing.html">Marlin Internet</a>
+                    <img src="marlin_internet.PNG" alt="Marlin Internet"/></th>
+            </tr>
+            <tr>
+                <th><a href="../coqui/rafaelpagan_project6/rb_build_txt.html">Build Your Own Red Ball Pizza</a>
+                    <img src="rb_build.PNG" alt="Red Ball Build"/></th>
+                <th><a href="../coqui/rafaelpagan_project6/rb_customer_txt.html">Manage Your Red Ball Pizza Account</a>
+                    <img src="rb_customer.PNG" alt="Red Ball Customer"/></th>
+            </tr>
+        </table>
+    </body>
 
 </html>
