--- a/p_my_work.html
+++ b/p_my_work.html
@@ -23,7 +23,7 @@
                 <th><a href="../coqui/rafaelpagan_problem1/adder.html">Math Equations</a></th>
                 <th><a href="../coqui/rafaelpagan_problem2/converter.html">Temperature Converter</a></th>
                 <th><a href="../coqui/tutorial/lht_august_txt.html">The Lyman Hall Theater</a>
-                    <img src="Lyman_hall.PNG" alt="Lyman Hall Theater" id="lyman"/></th>
+                    <img src="Lyman_hall.png" alt="Lyman Hall Theater" id="lyman"/></th>
             </tr>
         </table>
         
